--- a/app/src/main/res/layout/transaction_category_item.xml
+++ b/app/src/main/res/layout/transaction_category_item.xml
@@ -26,6 +26,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:lines="2"
         android:textColor="@color/colorSecondaryText"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
