--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,15 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/period_title"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:ellipsize="middle"
             android:gravity="center_horizontal"
             android:singleLine="true"
@@ -42,8 +43,8 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
             android:background="@drawable/home_period_box"
             android:enabled="false"
             android:gravity="center"
@@ -88,12 +89,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp" />
+        tools:visibility="gone" />
+
+    <include layout="@layout/home_empty_state_period_spendings" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="16dp"
         android:background="@color/colorSeparatorDivider" />
 
     <FrameLayout
@@ -132,8 +135,11 @@
         android:background="@color/colorSeparatorDivider" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/recent_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:visibility="gone"/>
+
+    <include layout="@layout/home_empty_state_recent" />
 
 </LinearLayout>
