--- a/app/src/main/res/layout/item_home_spendings.xml
+++ b/app/src/main/res/layout/item_home_spendings.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/spendings_value"
     android:layout_width="135dp"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
     app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="5dp"
@@ -23,29 +23,29 @@
         android:textColor="@color/colorText"
         tools:text="101k $"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+    <!--TODO feature-1 i'm not gonna work on this feature yer-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:orientation="horizontal">-->
 
-        <ImageView
-            android:id="@+id/spendings_card_change_icon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            app:srcCompat="@drawable/ic_trending_up_black_18dp"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/spendings_card_change_icon"-->
+            <!--android:layout_width="16dp"-->
+            <!--android:layout_height="16dp"-->
+            <!--app:srcCompat="@drawable/ic_trending_up_black_18dp"/>-->
 
-        <TextView
-            android:id="@+id/spendings_card_change_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp"
-            android:textColor="@color/colorPrimaryText"
-            tools:text="25%"/>
-
-    </LinearLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/spendings_card_change_value"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="4dp"-->
+            <!--android:layout_marginStart="4dp"-->
+            <!--android:textColor="@color/colorPrimaryText"-->
+            <!--tools:text="25%"/>-->
+    <!--</LinearLayout>-->
 
 
 </android.support.v7.widget.CardView>
