--- a/app/src/main/res/layout/transaction_currency_content.xml
+++ b/app/src/main/res/layout/transaction_currency_content.xml
@@ -1,56 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-<View
-    android:id="@+id/divider1"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/colorSeparatorDivider" />
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorSeparatorDivider"/>
 
-<FrameLayout
-    android:id="@+id/frame"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
-
-    <TextView
+    <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical"
-        android:padding="8dp"
-        android:text="@string/transaction_fields_currency"
-        android:textColor="@color/colorSecondaryText"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/more"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/home_button_add"
-        android:text="@string/transaction_na_more"
-        android:textColor="@color/colorText"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="@string/transaction_fields_currency"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
-<View
-    android:id="@+id/divider2"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/colorSeparatorDivider" />
+        <Button
+            android:id="@+id/more"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/home_button_add"
+            android:text="@string/transaction_na_more"
+            android:textColor="@color/colorText"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
+    </FrameLayout>
 
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/list"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorSeparatorDivider"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
