--- a/app/src/main/res/layout/activity_import_data.xml
+++ b/app/src/main/res/layout/activity_import_data.xml
@@ -7,83 +7,76 @@
     android:layout_height="match_parent"
     tools:context="com.akarbowy.spendingsapp.ui.importdata.ImportDataActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/import_currency"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="210dp"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:ellipsize="end"
+        android:gravity="bottom"
+        android:lines="1"
+        android:paddingBottom="36dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textColor="@color/white"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        tools:text="@tools:sample/lorem"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/import_currency_value"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:hint="@string/import_label_currency"
-            android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
-            android:text=" "
-            android:textSize="25sp"
-            tools:text="£"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/import_button"
+    <FrameLayout
+        android:id="@+id/steps"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorText"
-        android:text="@string/import_button_file"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/save_button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/import_currency"/>
-
-    <Button
-        android:id="@+id/save_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/transaction_button_save"
-        android:enabled="false"
-        android:text="@string/import_button_save"
-        android:textColor="@color/colorText"
-        android:textSize="18sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/import_button"
-        app:layout_constraintTop_toTopOf="@id/import_button"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/import_list"
-        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/progress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/import_button"
-        tools:visibility="visible"/>
+        app:layout_constraintTop_toBottomOf="@id/title">
+    </FrameLayout>
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:indeterminateOnly="true"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/controls"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible"/>
+
+    <FrameLayout
+        android:id="@+id/controls"
+        android:layout_width="0dp"
+        android:background="@color/white"
+        android:layout_height="50dp"
+        android:paddingStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/steps_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:elevation="4dp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="Step 1 of 3"/>
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="@null"
+            android:text="@string/import_button_save"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
